--- a/Views/orcamentos/new.ejs
+++ b/Views/orcamentos/new.ejs
@@ -18,7 +18,7 @@
                 <h2 style="text-align:center;">Orçamento</h2>
                 <form action="/orcamento/fixaDados" style="width: 30rem; margin: auto; float: left;" method="POST" onsubmit="verificaFunc(event,this)">
                    <label for="">Vendedor</label>
-                    <input type="text" class="form-control" name="funcionario" id="funcionario" value="<%=nome%>">
+                    <input type="text" class="form-control" name="func" id="funcionario" value="<%=nome%>">
                     <label for="">Cliente</label>
                     <input type="text" class="form-control">
                     <button class="btn btn-success" style="display: none;"> ok</button>
@@ -94,6 +94,7 @@
                         Total R$ <%=total.toFixed(2)%>
                     </h3>
                     <form action="/orcamentos/save" method="POST" >
+                        <input type="hidden" name="total" value="<%=total%>">
                         <button class="btn btn-success" id="btnFunc" >Finalizar</button> 
                     </form>
                 <%}%>
