--- a/Views/partials/navBarAdmin.ejs
+++ b/Views/partials/navBarAdmin.ejs
@@ -28,9 +28,17 @@
             <a class="dropdown-item" href="#">Inventario</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Clientes
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/admin/clientes/new">Adicionar</a>
+            <a class="dropdown-item" href="">Clientes</a>
+            <div class="dropdown-divider"></div>
+          </div>
         </li>
+    
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
